1.7.0 from https://github.com/TheRealAgentK/raygun4cfml/tree/master (#63)
* Fixes 2 issues found when using RG4CFML in a new project (#3)

* Fixing some small issues

* Setting version to 1.7.0-SNAPSHOT

* Feature/#56 java memory management (#4)

* Documenting the issue from the OP in the ticekt.

* Wrapping access to getMemoryXBean into try/catch.

* Test scenario and fix. (#5)

* Changed supported versions of ACF/Lucee

* fix: applyFilter deep search (#6)

* Fixes core problem in #62.

* Testcase

* Prep for 1.7.0 release

* Test for GH #58

* Documentation/Changelog updates